# ccom-mapper

./: .gitignore  README.md  example.py  pyproject.toml  utils.py
ccom/: __init__.py  decoder.py  encoder.py  manipulator.py  validator.py
ccom/schema/: CCOM.json  CoreComponentType_2p0.json
ccom/tests/: test_ccom.json  test_ccom_measurements.json  test_decoder.py  test_encoder.py
ccom/types/: __init__.py  core_component.py  helpers.py  types.py
mapper/: decoder.py  encoder.py  example.py  validator.py
mapper/tests/: test_ccom_measurements.json  test_decoder.py  test_encoder.py
mapper/types/: core_component.py  types.py
